Move NFL project image up slightly while keeping others same
- Added specific CSS rule for first project (NFL) to position at 60%
- Other projects (Poker, Cache Simulator) remain at 70% positioning
- This targets only the Football Match Predictor image positioning

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 				object-fit: cover;
 				object-position: center 70%;
 			}
+			/* NFL project image positioning - move up slightly */
+			.posts article:first-child .image img {
+				object-position: center 60%;
+			}
 			/* Resume button hover effects - red background with white text/border */
 			.resume-button:hover {
 				background-color: #f56a6a !important;
