--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 									<div class="resume-content">
 										<!-- Experience Section (Default Active) -->
 										<div id="experience-content" class="resume-section active" style="display: block; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Relevant Experiences</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Experiences</h3>
 											<div style="margin-bottom: 2em;">
 												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
 													<h4 style="margin: 0; color: #333;">Software Engineering Intern</h4>
@@ -466,6 +466,23 @@
 													<li>Analyzed digital performance metrics to refine SEO and SEM campaigns, enhancing Google search rankings, boosting visibility, and driving higher user engagement across platforms</li>
 													<li>Studied and evaluated Amazon's marketing strategy, identifying data-driven tactics and campaign structures that boosted overall performance and provided insights for replicable growth</li>
 												</ul>
+											</div>
+											
+											<div style="margin-bottom: 2em;">
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
+													<h4 style="margin: 0; color: #333;">Service Crew Member</h4>
+													<span style="color: #666; font-style: italic;">Metuchen, NJ</span>
+												</div>
+												<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1em;">
+													<p style="margin: 0; font-weight: bold; color: #555;">Akihi Bubble Tea</p>
+													<span style="color: #888; font-size: 0.9em;">April 2023 – August 2023</span>
+												</div>
+												<ul style="margin: 0; padding-left: 1.5em;">
+													<li>Efficiently managed point of sale transactions and demonstrated proficiency in customer engagement while accurately processing orders at the register</li>
+													<li>Prepared a wide variety of bubble tea beverages with consistency and accuracy</li>
+													<li>Trained new employees in drink preparation and customer service protocols</li>
+												</ul>
+											</div>
 						</div>
 					</div>
 
@@ -483,7 +500,13 @@
 												</div>
 												<ul style="margin-left: 1.5em; color: #555; margin-bottom: 1em;">
 													<li><strong>Awards:</strong> Dean's List (Fall 2023, Spring 2024, Fall 2024, Spring 2025)</li>
-													<li><strong>Clubs:</strong> RU RAGA (Rutgers University Raas and Garba Association)</li>
+													<li><strong>Clubs:</strong> RU RAGA (Rutgers University Raas and Garba Association) - Treasurer
+														<ul style="margin-left: 1.5em; margin-top: 0.5em;">
+															<li>Managed all expenses by tracking revenue, reimbursements, and competition-related costs to maintain accurate records and financial stability for five nationwide competitions</li>
+															<li>Coordinated with board members and Rutgers administration by arranging travel logistics, securing practice space, and scheduling fundraising efforts to support team participation</li>
+															<li>Oversaw budget allocation by reviewing projected expenses and prioritizing competition, travel, and team needs to maximize use of limited funds</li>
+														</ul>
+													</li>
 												</ul>
 												<p style="color: #555;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Computer Architecture, Software Methodology, Econometrics, Linear Algebra, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis</p>
 											</div>
