Fix formatting and reorganize education section
- Fixed Akihi Bubble Tea bullet points styling to match other sections (color: #555)
- Reorganized education section structure:
  - Awards, Relevant Coursework, and Clubs are now at the same level
  - Moved Relevant Coursework above Clubs as requested
  - Awards is first, Relevant Coursework is second, Clubs is last
- Maintained consistent formatting and colors throughout

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 													<p style="margin: 0; font-weight: bold; color: #555;">Akihi Bubble Tea</p>
 													<span style="color: #888; font-size: 0.9em;">April 2023 – August 2023</span>
 												</div>
-												<ul style="margin: 0; padding-left: 1.5em;">
+												<ul style="margin-left: 1.5em; color: #555;">
 													<li>Efficiently managed point of sale transactions and demonstrated proficiency in customer engagement while accurately processing orders at the register</li>
 													<li>Prepared a wide variety of bubble tea beverages with consistency and accuracy</li>
 													<li>Trained new employees in drink preparation and customer service protocols</li>
@@ -498,17 +498,16 @@
 													<p style="margin: 0; color: #666; font-style: italic;">Bachelor of Science in Computer Science, Data Science, and Economics</p>
 													<span style="color: #666; font-style: italic;">September 2023 - December 2026</span>
 												</div>
-												<ul style="margin-left: 1.5em; color: #555; margin-bottom: 1em;">
-													<li><strong>Awards:</strong> Dean's List (Fall 2023, Spring 2024, Fall 2024, Spring 2025)</li>
-													<li><strong>Clubs:</strong> RU RAGA (Rutgers University Raas and Garba Association) - Treasurer
-														<ul style="margin-left: 1.5em; margin-top: 0.5em;">
-															<li>Managed all expenses by tracking revenue, reimbursements, and competition-related costs to maintain accurate records and financial stability for five nationwide competitions</li>
-															<li>Coordinated with board members and Rutgers administration by arranging travel logistics, securing practice space, and scheduling fundraising efforts to support team participation</li>
-															<li>Oversaw budget allocation by reviewing projected expenses and prioritizing competition, travel, and team needs to maximize use of limited funds</li>
-														</ul>
-													</li>
-												</ul>
-												<p style="color: #555;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Computer Architecture, Software Methodology, Econometrics, Linear Algebra, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis</p>
+												<p style="color: #555; margin-bottom: 1em;"><strong>Awards:</strong> Dean's List (Fall 2023, Spring 2024, Fall 2024, Spring 2025)</p>
+												<p style="color: #555; margin-bottom: 1em;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Computer Architecture, Software Methodology, Econometrics, Linear Algebra, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis</p>
+												<div style="color: #555;">
+													<p style="margin-bottom: 0.5em;"><strong>Clubs:</strong> RU RAGA (Rutgers University Raas and Garba Association) - Treasurer</p>
+													<ul style="margin-left: 1.5em; margin-top: 0.5em;">
+														<li>Managed all expenses by tracking revenue, reimbursements, and competition-related costs to maintain accurate records and financial stability for five nationwide competitions</li>
+														<li>Coordinated with board members and Rutgers administration by arranging travel logistics, securing practice space, and scheduling fundraising efforts to support team participation</li>
+														<li>Oversaw budget allocation by reviewing projected expenses and prioritizing competition, travel, and team needs to maximize use of limited funds</li>
+											</ul>
+												</div>
 											</div>
 										</div>
 										
@@ -529,7 +528,7 @@
 													<li>Architected an AI-powered healthcare monitoring system using Whisper locally for low latency speech recognition and Spacy for NLP</li>
 													<li>Engineered a 3D post-operative patient engagement interface with Spline, enhancing recovery experience and medical outcome tracking</li>
 													<li>Built a contradiction detection algorithm using ML models to analyze patient-doctor dialogues, reducing medication and surgery errors</li>
-											</ul>
+									</ul>
 											</div>
 										</div>
 										
