--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
 													<h4 style="margin: 0; color: #333;">Service Crew Member</h4>
 													<span style="color: #666; font-style: italic;">Metuchen, NJ</span>
 												</div>
-												<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1em;">
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1em;">
 													<p style="margin: 0; font-weight: bold; color: #555;">Akihi Bubble Tea</p>
-													<span style="color: #888; font-size: 0.9em;">April 2023 – August 2023</span>
+													<span style="color: #666; font-style: italic;">April 2023 – August 2023</span>
 												</div>
 												<ul style="margin-left: 1.5em; color: #555;">
 													<li>Efficiently managed point of sale transactions and demonstrated proficiency in customer engagement while accurately processing orders at the register</li>
