Add section separator between Resume and Contact sections
- View Full Resume button remains properly within the Resume section
- Added visual separator line between Resume and Contact sections
- Used gradient hr element to match website theme with red accent color
- Creates clear section boundaries like other parts of the website

--- a/index.html
+++ b/index.html
@@ -598,6 +598,9 @@
 									</div>
 								</section>
 
+							<!-- Section Separator -->
+							<hr style="border: none; height: 2px; background: linear-gradient(to right, #f56a6a, transparent); margin: 4em 0; width: 80%; margin-left: auto; margin-right: auto;" />
+
 							<!-- Contact Section -->
 								<section id="contact">
 									<header class="major">
