Remove custom margin from Contact header to match other sections
- Removed margin-left: 4em from Contact header
- Contact header now uses the same default template styling as Courses, Projects, and Resume
- This ensures proper responsive behavior and consistent positioning at all zoom levels
- Header will now scale properly with zoom like all other section headers

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 							<!-- Contact Section -->
 								<section id="contact">
 									<header class="major">
-										<h2 style="font-size: 2em; margin-left: 4em;">Contact</h2>
+										<h2 style="font-size: 2em;">Contact</h2>
 									</header>
 									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 2em; align-items: start; max-width: 1400px; margin: 0 auto; padding: 0 2em;">
 										<!-- Contact Information -->
