Rewrite Contact section header to match other sections exactly
- Changed comment from 'Contact Section' to 'Section' to match Courses, Projects, and Resume
- Contact section now follows the exact same structure and naming pattern as other sections
- This ensures consistent behavior and positioning with all other section headers

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 									</div>
 								</section>
 
-							<!-- Contact Section -->
+							<!-- Section -->
 								<section id="contact">
 									<header class="major">
 										<h2 style="font-size: 2em;">Contact</h2>
