--- a/index.html
+++ b/index.html
@@ -598,14 +598,13 @@
 									</div>
 								</section>
 
-							<!-- Section -->
-							<section id="contact">
-								<header class="major">
-									<h2 style="font-size: 2em;">Contact</h2>
-								</header>
-									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 2em; align-items: start; max-width: 100%; width: 100%;">
+								<section id="contact">
+									<header class="major">
+										<h2 style="font-size: 2em;">Contact</h2>
+									</header>
+									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 1em; align-items: start; max-width: 1400px; margin: 0 auto; padding: 0 2em;">
 										<!-- Contact Information -->
-										<div class="contact-info" style="padding: 2em; padding-top: 1.5em;">
+										<div class="contact-info" style="padding: 3em; padding-top: 1.5em;">
 											<h3 style="color: #f56a6a; margin-bottom: 1.5em; font-size: 2.5em; margin-top: 0;">Say Hi!</h3>
 											
 											<div style="margin-bottom: 2.5em;">
@@ -642,7 +641,7 @@
 										</div>
 										
 										<!-- Contact Form -->
-										<div class="contact-form" style="padding: 1em; width: 100%;">
+										<div class="contact-form" style="padding: 1.5em; width: 100%;">
 											<form method="post" action="#" onsubmit="return showMessageSent(event);" style="display: flex; flex-direction: column; gap: 1.5em; width: 100%;">
 												<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5em; width: 100%;">
 													<input type="text" name="name" id="name" placeholder="Your Name" style="padding: 1.5em; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 1.2em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
