--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
 				margin-left: auto !important;
 				justify-content: flex-end !important;
 			}
+			/* Force Contact header alignment to match other sections */
+			#contact header.major {
+				margin-left: 0 !important;
+				padding-left: 0 !important;
+				text-align: left !important;
+			}
+			#contact header.major h2 {
+				margin-left: 0 !important;
+				padding-left: 0 !important;
+				text-align: left !important;
+			}
 		</style>
 		<script>
 			function showSection(sectionName) {
