--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 				margin-left: auto !important;
 				justify-content: flex-end !important;
 			}
-			/* Force Contact header alignment to match other sections */
+			/* Force Contact header alignment to match Resume header exactly */
 			#contact header.major {
-				margin-left: 0 !important;
+				margin-left: calc((100% - 1400px) / 2 + 2em) !important;
 				padding-left: 0 !important;
 				text-align: left !important;
 			}
