--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			}
 			/* Force Contact header alignment to match Resume header exactly */
 			#contact header.major {
-				margin-left: 0 !important;
+				margin-left: 2em !important;
 				padding-left: 0 !important;
 				text-align: left !important;
 			}
