--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			}
 			/* Force Contact header alignment to match Resume header exactly */
 			#contact header.major {
-				margin-left: calc((100% - 1400px) / 2 + 0.5em) !important;
+				margin-left: calc((100% - 1400px) / 2 - 1em) !important;
 				padding-left: 0 !important;
 				text-align: left !important;
 			}
