--- a/index.html
+++ b/index.html
@@ -602,11 +602,12 @@
 									</div>
 									
 									<!-- View Resume Link -->
-									<div style="text-align: center; margin-top: 3em; padding-top: 2em; border-top: 2px solid #f0f0f0;">
+									<div style="text-align: center; margin-top: 3em;">
 										<a href="https://drive.google.com/file/d/1uPV1EGUfNIZ0xv-ecaTi7ER3fZkdeiqN/view?usp=sharing" target="_blank" id="resumeButton" style="display: inline-block; background: white; color: black !important; border: 2px solid #ddd; padding: 0.8em 1.8em; border-radius: 25px; text-decoration: none; font-size: 1.1em; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; transition: all 0.2s ease; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);" onmouseover="this.style.background='#f56a6a'; this.style.setProperty('color', 'white', 'important'); this.style.borderColor='#f56a6a'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(245, 106, 106, 0.3)'" onmouseout="this.style.background='white'; this.style.setProperty('color', 'black', 'important'); this.style.borderColor='#ddd'; this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 8px rgba(0, 0, 0, 0.1)'">
 											View Full Resume
 										</a>
 									</div>
+									<div style="margin-top: 2em; padding-top: 2em; border-top: 2px solid #f0f0f0;"></div>
 								</section>
 							<!-- Section -->
 								<section id="contact">
