--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 				margin-left: auto !important;
 				justify-content: flex-end !important;
 			}
-			/* Try different approach - move header outside the content flow */
+			/* Try viewport-based approach for consistent alignment */
 			#contact header.major {
-				transform: translateX(-2em) !important;
+				margin-left: -15vw !important;
 			}
 		</style>
 		<script>
