--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 				margin-left: auto !important;
 				justify-content: flex-end !important;
 			}
-			/* Try viewport-based approach for consistent alignment */
+			/* Fixed pixel approach for consistent alignment at all zoom levels */
 			#contact header.major {
-				margin-left: 15vw !important;
+				margin-left: 200px !important;
 			}
 		</style>
 		<script>
