--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
 											<h1>Hi, I'm Vineeth Reddy</h1>
 											<h2><span id="rotating-text">A Student At Rutgers University</span><span class="cursor">|</span></h2>
 										</header>
-										<p>What draws me to technology is its ability to turn curiosity into creation, and being able to take an idea or passion and transform it into something tangible through code.</p>
-										<p>That mindset has shaped many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. These projects blend the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
-										<p>The most fulfilling part has been discovering how coding can enhance my own interests and bring them to life. Moving forward, I'm excited to carry that same spirit beyond my personal projects, creating technology that not only solves problems but also enriches people's lives on a larger scale.</p>
+										<p style="font-size: 1.1em;">What draws me to technology is its ability to turn curiosity into creation, and being able to take an idea or passion and transform it into something tangible through code.</p>
+										<p style="font-size: 1.1em;">That mindset has shaped many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. These projects blend the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
+										<p style="font-size: 1.1em;">The most fulfilling part has been discovering how coding can enhance my own interests and bring them to life. Moving forward, I'm excited to carry that same spirit beyond my personal projects, creating technology that not only solves problems but also enriches people's lives on a larger scale.</p>
 									</div>
 									<span class="image object">
 										<img src="images/vineeth-screenshot.jpg" alt="" />
@@ -633,6 +633,16 @@
 													<div>
 														<h4 style="margin: 0; color: #333; font-size: 1.4em; margin-bottom: 0.2em;">Call:</h4>
 														<a href="tel:8484046616" style="margin: 0; color: #666; text-decoration: none; font-size: 1.1em;">+1 (848) 404-6616</a>
+													</div>
+												</div>
+												
+												<div style="display: flex; align-items: center; margin-bottom: 2em;">
+													<div style="width: 60px; height: 60px; background: rgba(245, 106, 106, 0.1); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 1.5em;">
+														<span class="icon brands fa-linkedin" style="color: #f56a6a; font-size: 1.5em;"></span>
+													</div>
+													<div>
+														<h4 style="margin: 0; color: #333; font-size: 1.4em; margin-bottom: 0.2em;">LinkedIn:</h4>
+														<a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" style="margin: 0; color: #666; text-decoration: none; font-size: 1.1em;">vineeth-reddy123</a>
 													</div>
 												</div>
 											</div>
