--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 										<article>
 											<a href="https://github.com/Vin916/NFL_match_predictor" target="_blank" class="image"><img src="images/Free SVG Converter (1).svg" alt="Football Match Predictor Project" /></a>
 											<h3 style="display: flex; justify-content: space-between; align-items: center;">Football Match Predictor <a href="https://github.com/Vin916/NFL_match_predictor" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
-											<p>Engineered an end-to-end machine learning pipeline using XGBoost, Decision Trees, and Random Forest on historical NFL data to predict game outcomes with high accuracy. Deployed a Flask-based REST API delivering real-time win probabilities and score forecasts, with optimized performance through advanced feature engineering and hyperparameter tuning.</p>
+											<p>Engineered an end-to-end machine learning ensemble model leveraging XGBoost, Logistic Regression, Decision Trees, and Random Forest on historical NFL play-by-play data to predict game outcomes with high accuracy. Deployed a Flask-based REST API to deliver win probabilities and score forecasts for live interaction, with optimized predictive performance through real-time data integration and game result updates.</p>
 										</article>
 										<article>
 											<a href="https://github.com/Vin916/Poker" target="_blank" class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></a>
